fix popup overlapping

--- a/htdocs/t/mybar/mybar.css
+++ b/htdocs/t/mybar/mybar.css
@@ -6,7 +6,7 @@ a { color: #000; }
 #the-main-menu .link { color: #888; }
 #the-main-menu.state-up,
 #the-main-menu.state-down,
-#the-main-menu.state-fixed { z-index: 1000; }
+#the-main-menu.state-fixed { z-index: 10; }
 #the-main-menu.state-up .link,
 #the-main-menu.state-down .link,
 #the-main-menu.state-fixed .link { color: #fff; }
@@ -56,7 +56,7 @@ html.loading .main-box { display: none; }
 /*ingredients-box*/
 .main-box .ingredients-box .section-head .bar-name-editable { position: relative; top: -1px; background: none; border: medium none; outline: none; color: inherit; display: block; float: left; font-size: inherit; color: #fff; font-weight: bold; text-shadow: inherit; width: 600px; }
 .main-box .ingredients-box .section-head .advice { font-size: 10px; font-weight: normal; position: absolute; top: 32px; left: 140px; }
-.main-box .ingredients-box .search-box { margin-top: 30px; margin-left: 19px; position: relative; z-index: 100; color: #000; font-size: 18px; }
+.main-box .ingredients-box .search-box { margin-top: 30px; margin-left: 19px; position: relative; z-index: 5; color: #000; font-size: 18px; }
 .main-box .ingredients-box .search-box button { color: #3c3c3c; font-size: 14px; line-height: 24px; background: url("mybar.png") no-repeat -905px -454px #fff; border: 1px solid; border-color: #ccc #999 #999 #ccc; height: 32px; vertical-align: middle; }
 .main-box .ingredients-box .search-box .search-button { width: 87px; }
 .main-box .ingredients-box .search-box .lucky-button { width: 107px; display: none; }
